removed unnecessary dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 
 # package   tested with version
-black       # 22.1.0
 matplotlib  # 3.5.1
 networkx    # 2.6.3
+pydot       # 1.4.2
 python-sat  # 0.1.7.dev15
 qiskit      # 0.34.1
