ignore CI tests when only readme updates

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,6 +9,7 @@ on:
     paths-ignore:
       - 'doc/**'
       - '.github/**'
+      - 'README.md'
   pull_request:
     branches: [ main ]
     paths-ignore:
