--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ main ]
     paths-ignore:
-      - 'doc/**'
+      - 'docs/**'
       - '.github/**'
       - 'README.md'
   pull_request:
