--- a/.pylintrc
+++ b/.pylintrc
@@ -35,7 +35,7 @@ load-plugins=
 # can either give multiple identifier separated by comma (,) or put this option
 # multiple time.
 #disable=C0103,W0613,W0612
-disable=W0613,W0612,F0401,E0611
+disable=W0613,W0612,F0401,E0611,no-else-return
 
 
 [REPORTS]
